--- a/05-infer/02-lesson/05-02-lesson.Rmd
+++ b/05-infer/02-lesson/05-02-lesson.Rmd
@@ -132,7 +132,7 @@ knitr::include_graphics("images/2-1-2.png")
 
 ### Hypothesis test
 
-A hypothesis test on a proportion asks the question: what sort of p-hats would you observe if the true parameter p held a particular value?
+A hypothesis test on a proportion asks the question: what sort of $\hat{p}\text{s}$ would you observe if the true parameter p held a particular value?
 
 ```{r echo=FALSE, out.width = "60%"}
 knitr::include_graphics("images/2-1-3.png")
@@ -156,7 +156,7 @@ knitr::include_graphics("images/2-1-5.png")
 
 ### 
 
-Thus the sampling distribution, now called the null distribution, captures the variability in p-hat that you might observe in a world where H0 is true.
+Thus the sampling distribution, now called the null distribution, captures the variability in $\hat{p}$ that you might observe in a world where $H_0$ is true.
 
 ```{r echo=FALSE, out.width = "60%"}
 knitr::include_graphics("images/2-1-6.png")
@@ -166,7 +166,7 @@ knitr::include_graphics("images/2-1-6.png")
 
 Let’s use a hypothesis test to study another question on the gss. Respondents were asked if they favor or oppose capital punishment, also called the death penalty, for the crime of murder. You can look at the distribution of answers by forming a bar chart. You see that of the 150 respondents, more than half answered in favor.
 
-You can calculate that proportion, p-hat, more precisely using the `summarize` command, and you learn that the proportion is about 0.57.
+You can calculate that proportion, $\hat{p}$, more precisely using the `summarize` command, and you learn that the proportion is about 0.57.
 
 ```{r echo=TRUE}
 p_hat <- gss2016 |>
@@ -183,7 +183,7 @@ Next, you hypothesize that the true proportion that favor is 0.5. This is an exa
 
 Next, we generate through "simulation", 500 data sets that might occur under this hypothesis, and calculate the proportion that favor for each. We’ll save this data frame under the name `null`.
 
-If you print out the top of the null data frame, you’ll see in the `stat` column you have 500 examples of the type of p-hats that might occur if in fact the true parameter is 0.5. Recall that in the confidence interval setting, these are clustered around the p-hat that was found in the original `gss2016` data set, whereas here they are clustered around the null value 0.5.
+If you print out the top of the null data frame, you’ll see in the `stat` column you have 500 examples of the type of $\hat{p}\text{s}$ that might occur if in fact the true parameter is 0.5. Recall that in the confidence interval setting, these are clustered around the $\hat{p}$ that was found in the original `gss2016` data set, whereas here they are clustered around the null value 0.5.
 
 ```{r include=FALSE}
 set.seed(12345)
@@ -201,7 +201,7 @@ null
 
 ### 
 
-The distribution of those statistics can be visualized using a density plot. We’ll add in `geom_vline` to overlay a vertical red line at the location of our observed p-hat, 0.57. The curve represents the sort of p-hats you would see if p was 0.50 and the red line is the p-hat that you actually observed. If your p-hat is in the main part of the null distribution, then it is consistent with the null hypothesis. If it’s far into the tails, though, it’s deemed very unlikely if the null hypothesis were true. 
+The distribution of those statistics can be visualized using a density plot. We’ll add in `geom_vline` to overlay a vertical red line at the location of our observed $\hat{p}$, 0.57. The curve represents the sort of $\hat{p}\text{s}$ you would see if p was 0.50 and the red line is the $\hat{p}$ that you actually observed. If your $\hat{p}$ is in the main part of the null distribution, then it is consistent with the null hypothesis. If it’s far into the tails, though, it’s deemed very unlikely if the null hypothesis were true. 
 
 ```{r eval=TRUE}
 ggplot(null, aes(x = stat)) +
@@ -212,7 +212,7 @@ ggplot(null, aes(x = stat)) +
   )
 ```
 
-This is formalized by computing the p-value, the proportion of generated p-hats that were more extreme than the observed p-hat. In other words, we want to summarize the column of statistics by finding the proportion that are greater than 0.57. We multiply that number by two to account for the left tail of the null distribution, which also contained p-hats that were farther from the center of the distribution than 0.57.
+This is formalized by computing the p-value, the proportion of generated $\hat{p}\text{s}$ that were more extreme than the observed $\hat{p}$. In other words, we want to summarize the column of statistics by finding the proportion that are greater than 0.57. We multiply that number by two to account for the left tail of the null distribution, which also contained $\hat{p}\text{s}$ that were just as far from the center of the distribution, in the opposite direction.
 
 ```{r eval=TRUE, echo=TRUE}
 null |>
@@ -230,7 +230,7 @@ null |>
 
 To recap, the hypothesis test is formulated around a null hypothesis that states a theory about the way the world works, in this case the particular point value taken by a proportion. 
 
-The null distribution provides a sense of the statistics, the p-hats, that would be calculated if you were to generate many data sets according to the null hypothesis. The p-value tells you where your actual observed p-hat falls into that distribution. 
+The null distribution provides a sense of the statistics, the $\hat{p}\text{s}$, that would be calculated if you were to generate many data sets according to the null hypothesis. The p-value tells you where your actual observed $\hat{p}$ falls into that distribution. 
 
 If it's in the body of the distribution, the p-value will be high, indicating consistency between your data and the null hypothesis. 
 
@@ -306,7 +306,7 @@ p_hat <- gss2016 |>
 p_hat
 ```
 
-### Generating from H0
+### Generating from $H_0$
 
 Imagine that when reading the newspaper, you come across someone who makes the following claim: "3/4 of all Americans believe in life after death". This can be interpreted as a _point_ null hypothesis that the population proportion has a value of 0.75.
 
@@ -320,7 +320,7 @@ Using `gss2016`,
 
 
 ```{r ex3, exercise=TRUE}
-# Generate one data set under H0
+# Generate one data set under $H_0$
 sim1 <- gss2016 |>
   # Specify the response and success
   ___(response = ___, success = ___) |>
@@ -341,7 +341,7 @@ sim1
 ```
 
 ```{r ex3-solution}
-# Generate one data set under H0
+# Generate one data set under $H_0$
 sim1 <- gss2016 |>
   # Explicitly exclude missing data
   na.omit() |> 
@@ -432,7 +432,7 @@ sim1 |>
 
 ### Testing a claim
 
-In the last exercise, you got a sense of what a single simulated p-hat might be if in fact the true proportion of believers was 0.75. That p-hat was likely different from the p-hat in `gss2016`, but was that a fluke or is there a systematic inconsistency between that claim and the data in the GSS?
+In the last exercise, you got a sense of what a single simulated $\hat{p}$ might be if in fact the true proportion of believers was 0.75. That $\hat{p}$ was likely different from the $\hat{p}$ in `gss2016`, but was that a fluke or is there a systematic inconsistency between that claim and the data in the GSS?
 
 In this exercise, you'll settle this question.
 
@@ -449,7 +449,7 @@ p_hat <- gss2016 |>
     pull()
 ```
 
-Extend your code for the last exercise to `calculate()` sample proportions of believers in 500 generated data sets. Save this collection of p-hats to `null`.
+Extend your code for the last exercise to `calculate()` sample proportions of believers in 500 generated data sets. Save this collection of $\hat{p}\text{s}$ to `null`.
 
 ```{r ex6, exercise=TRUE}
 # Generate null distribution
@@ -641,7 +641,7 @@ Let $p$ be the proportion that believe in life after death.
 
 There are plenty of more pressing questions that just beg to be asked of this data, but they require that we look at more than just a single variable. We're curious to know: do men and women believe at different rates? 
 
-Let p be the true proportion of individuals who believe in life after death. 
+Let $p$ be the true proportion of individuals who believe in life after death. 
 
 We can then phrase this question as the null hypothesis that the difference in the proportion of men that believe and the proportion of women that believe is zero. 
 
@@ -702,7 +702,7 @@ We can calculate the difference in these proportions by using our normal summari
 
 
 
-### Generating data from H0
+### Generating data from $H_0$
 
 
 - $H\_{0} : p\_{female} - p\_{male} = 0$
@@ -1309,7 +1309,7 @@ knitr::include_graphics("images/2-3-8.png")
 
 ### 
 
-The distribution of the differences in p-hats that you might observe in a given sample if the null is true.
+The distribution of the differences in $\hat{p}\text{s}$ that you might observe in a given sample if the null is true.
 
 ```{r echo=FALSE, out.width = "60%"}
 knitr::include_graphics("images/2-3-9.png")
@@ -1349,7 +1349,7 @@ knitr::include_graphics("images/2-3-13.png")
 
 ### 
 
-There's a second type of error to be aware of when conducting hypothesis tests, one that occurs when in fact H0 is false and some other model we'll call HA is the true model.
+There's a second type of error to be aware of when conducting hypothesis tests, one that occurs when in fact $H_0$ is false and some other model we'll call $H_A$ is the true model.
 
 ```{r echo=FALSE, out.width = "60%"}
 knitr::include_graphics("images/2-3-14.png")
@@ -1357,7 +1357,7 @@ knitr::include_graphics("images/2-3-14.png")
 
 ### 
 
-One hopes that after looking at your data and computing a p-value you would decide to reject H0.
+One hopes that after looking at your data and computing a p-value you would decide to reject $H_0$.
 
 ```{r echo=FALSE, out.width = "60%"}
 knitr::include_graphics("images/2-3-15.png")
@@ -1365,7 +1365,7 @@ knitr::include_graphics("images/2-3-15.png")
 
 ### 
 
-If you fail to reject H0, you've committed what's called a Type II error.
+If you fail to reject $H_0$, you've committed what's called a Type II error.
 
 ```{r echo=FALSE, out.width = "60%"}
 knitr::include_graphics("images/2-3-16.png")
@@ -1373,7 +1373,7 @@ knitr::include_graphics("images/2-3-16.png")
 
 ### 
 
-To visualize a Type II error, you have to start by realizing that H0 is no longer the model that is generating your data. Now, it's coming from HA.
+To visualize a Type II error, you have to start by realizing that $H_0$ is no longer the model that is generating your data. Now, it's coming from $H_A$.
 
 ```{r echo=FALSE, out.width = "60%"}
 knitr::include_graphics("images/2-3-17.png")
@@ -1381,7 +1381,7 @@ knitr::include_graphics("images/2-3-17.png")
 
 ### 
 
-However, you are using the same thresholds, those dotted gray lines, for the reject and fail-to-reject regions, so you will retain H0 whenever you observe a statistic in this region.
+However, you are using the same thresholds, those dotted gray lines, for the reject and fail-to-reject regions, so you will retain $H_0$ whenever you observe a statistic in this region.
 
 ```{r echo=FALSE, out.width = "60%"}
 knitr::include_graphics("images/2-3-18.png")
@@ -1389,13 +1389,13 @@ knitr::include_graphics("images/2-3-18.png")
 
 ### 
 
-The probability of that event corresponds to the area shaded here, which is usually given the Greek letter beta.
+The probability of that event corresponds to the area shaded here, which is usually given the Greek letter $\beta$.
 
 ```{r echo=FALSE, out.width = "60%"}
 knitr::include_graphics("images/2-3-19.png")
 ```
 
-The other potion of the area under this curve, 1 - Beta, is called the power. The statistical power of the test is the probability that it will reject H0 if in fact it is false. Said another way, it's your power to detect an effect if it exists. This is an extremely important property of a statistical test. In general, you can affect and increase in the power in two ways. First is to increase the size of the reject region by increasing alpha. This has a trade-off though: now you're increased the Type I error rate. The second is to increase your sample size. This will have the effect of shrinking the variance of these curves, which would increase the area of the curve that is in the reject region.
+The other potion of the area under this curve, 1 - $\beta$, is called the power. The statistical power of the test is the probability that it will reject $H_0$ if in fact it is false. Said another way, it's your power to detect an effect if it exists. This is an extremely important property of a statistical test. In general, you can affect and increase in the power in two ways. First is to increase the size of the reject region by increasing alpha. This has a trade-off though: now you're increased the Type I error rate. The second is to increase your sample size. This will have the effect of shrinking the variance of these curves, which would increase the area of the curve that is in the reject region.
 
 ### When the null is true
 
